<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="相机设置">
    <SwitchPreference
        android:defaultValue="true"
        android:key="autofocus_switch"
        android:summary="@string/pref_description_autofocus"
        android:title="@string/pref_title_autofocus" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_quality_list_titles"
        android:entryValues="@array/pref_quality_list_values"
        android:key="quality_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_quality_to_messages" />
</PreferenceCategory>
    <PreferenceCategory android:title="帮助中心">
        <Preference android:title="使用帮助"
            android:key="usedHelp">
        </Preference>

        <Preference android:title="后台下载更新"
            android:key="cameraUpdate">
        </Preference>
        <Preference android:title="强制更新"
            android:key="cameraForceUpdate">
        </Preference>

        <Preference android:title="测试contentprovide"
            android:key="testcontentprovide">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
